@@ -25,7 +25,6 @@ import org.apache.cassandra.sidecar.models.Range;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * RangeTest
@@ -35,12 +34,23 @@ public class RangeTest
     @Test
     public void testValidPartialRange()
     {
-        final String rangeHeaderVal = "bytes=2-";
-        final Range range = Range.parseHeader(rangeHeaderVal, 5);
+        String rangeHeaderVal = "bytes=2-";
+        Range range = Range.parseHeader(rangeHeaderVal, 5);
         assertEquals(3, range.length());
         assertEquals(2, range.start());
         assertEquals(4, range.end());
-        assertTrue(range.isValidHttpRange());
+
+        rangeHeaderVal = "bytes=-100";
+        range = Range.parseHeader(rangeHeaderVal, 5);
+        assertEquals(5, range.length());
+        assertEquals(0, range.start());
+        assertEquals(4, range.end());
+
+        rangeHeaderVal = "bytes=-100";
+        range = Range.parseHeader(rangeHeaderVal, 200);
+        assertEquals(100, range.length());
+        assertEquals(100, range.start());
+        assertEquals(199, range.end());
     }
 
     @Test
@@ -51,40 +61,39 @@ public class RangeTest
         assertEquals(101, range.length());
         assertEquals(0, range.start());
         assertEquals(100, range.end());
-        assertTrue(range.isValidHttpRange());
     }
 
     @Test
     public void testInvalidRangeFormat()
     {
-        final String rangeVal = "2344--3432";
+        final String rangeHeader = "bytes=2344--3432";
         IllegalArgumentException thrownException = assertThrows(IllegalArgumentException.class, () ->
         {
-            Range.parse(rangeVal);
+            Range.parseHeader(rangeHeader, Long.MAX_VALUE);
         });
-        String msg = "Supported Range formats are <start>-<end>, <start>-, -<suffix-length>";
+        String msg = "Invalid range header: bytes=2344--3432. Supported Range formats are bytes=<start>-<end>, bytes=<start>-, bytes=-<suffix-length>";
         assertEquals(msg, thrownException.getMessage());
     }
 
     @Test
     public void testInvalidSuffixLength()
     {
-        final String rangeVal = "-0";
+        final String rangeHeader = "bytes=-0";
         IllegalArgumentException thrownException = assertThrows(IllegalArgumentException.class, () ->
         {
-            Range.parse(rangeVal, Long.MAX_VALUE);
+            Range.parseHeader(rangeHeader, Long.MAX_VALUE);
         });
-        String msg = "Suffix length in -0 cannot be less than or equal to 0";
+        String msg = "Range does not satisfy boundary requirements";
         assertEquals(msg, thrownException.getMessage());
     }
 
     @Test
     public void testInvalidRangeBoundary()
     {
-        final String rangeVal = "9-2";
-        RangeException thrownException = assertThrows(RangeException.class, () ->
+        final String rangeHeader = "bytes=9-2";
+        IllegalArgumentException thrownException = assertThrows(IllegalArgumentException.class, () ->
         {
-            Range.parse(rangeVal);
+            Range.parseHeader(rangeHeader, Long.MAX_VALUE);
         });
         String msg = "Range does not satisfy boundary requirements";
         assertEquals(msg, thrownException.getMessage());
@@ -94,11 +103,63 @@ public class RangeTest
     public void testWrongRangeUnitUsed()
     {
         final String rangeVal = "bits=0-";
-        UnsupportedOperationException thrownException = assertThrows(UnsupportedOperationException.class, () ->
+        IllegalArgumentException thrownException = assertThrows(IllegalArgumentException.class, () ->
         {
             Range.parseHeader(rangeVal, 5);
         });
-        String msg = "Unsupported range unit only bytes are allowed";
+        String msg = "Invalid range header: bits=0-. Supported Range formats are bytes=<start>-<end>, bytes=<start>-, bytes=-<suffix-length>";
         assertEquals(msg, thrownException.getMessage());
+    }
+
+    @Test
+    public void testToString()
+    {
+        final String rangeHeaderVal = "bytes=0-100";
+        final Range range = Range.parseHeader(rangeHeaderVal, Long.MAX_VALUE);
+        assertEquals("bytes=0-100", range.toString());
+    }
+
+    @Test
+    public void testInvalidRangeBoundValueInHeader()
+    {
+        // the right end of range is larger than long
+        final String rangeHeader = "bytes=0-1" + Long.MAX_VALUE;
+        IllegalArgumentException thrownException = assertThrows(IllegalArgumentException.class, () ->
+        {
+            Range.parseHeader(rangeHeader, Long.MAX_VALUE);
+        });
+        String msg = "Invalid range header: bytes=0-19223372036854775807. Supported Range formats are bytes=<start>-<end>, bytes=<start>-, bytes=-<suffix-length>";
+        assertEquals(msg, thrownException.getMessage());
+    }
+
+    @Test
+    public void testIntersect() {
+        Range range1, range2, expected;
+        range1 = Range.of(5, 10);
+        range2 = Range.of(9, 15);
+        expected = Range.of(9, 10);
+        assertEquals(expected, range1.intersect(range2));
+        assertEquals(expected, range2.intersect(range1));
+
+        range1 = Range.of(1, 5);
+        range2 = Range.of(5, 15);
+        expected = Range.of(5, 5);
+        assertEquals(expected, range1.intersect(range2));
+        assertEquals(expected, range2.intersect(range1));
+
+        range1 = Range.of(1, 15);
+        range2 = Range.of(5, 10);
+        expected = Range.of(5, 10);
+        assertEquals(expected, range1.intersect(range2));
+        assertEquals(expected, range2.intersect(range1));
+
+    }
+
+    @Test
+    public void testRangesDoNotIntersect() {
+        Range range1 = Range.of(1, 5);
+        Range range2 = Range.of(9, 15);
+
+        assertThrows(RangeException.class, () -> range1.intersect(range2));
     }
 }
